<resources>
    <string name="app_name">MPYG_Asssignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hey">Hey</string>
    <string name="suresh">Suresh! 👋</string>
    <string name="let_s_make_this_morning_amazing">Let\'s make this morning amazing!</string>
    <string name="_2">2</string>
    <string name="start_today_s_session">Start Today’s Session</string>
    <string name="intermediate_level">Intermediate Level</string>
    <string name="improve_focus">Improve Focus</string>
    <string name="reduce_stress">Reduce Stress</string>
    <string name="increase_productivity">Increase Productivity</string>
    <string name="_15">15</string>
    <string name="minutes">minutes</string>
    <string name="self_love_is_not_selfish">Self love is not selfish</string>
    <string name="quoteLineB">its, the foundation of your well being.</string>
    <string name="_186_users_are_already_practicing">186+ users are already practicing</string>
    <string name="start_now">Start now</string>
</resources>