<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomeScreenFragment"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.18"
                    android:src="@drawable/runner" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_today_s_session"
                        android:textColor="#101828"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_regular"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intermediate_level"
                        android:textColor="#A3A3A3"
                        android:textSize="12sp"
                        android:fontFamily="@font/poppins_regular"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/featuresLinearLayout1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@+id/featuresLinearLayout2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="spread">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/check_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/improve_focus"
                            android:textColor="#334155"
                            android:textSize="14sp"
                            android:fontFamily="@font/poppins_regular"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/featuresLinearLayout2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@+id/featuresLinearLayout3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/featuresLinearLayout1">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/check_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/reduce_stress"
                            android:textColor="#334155"
                            android:textSize="14sp"
                            android:fontFamily="@font/poppins_regular"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/featuresLinearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/featuresLinearLayout2">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/check_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:text="@string/increase_productivity"
                            android:textColor="#334155"
                            android:textSize="14sp"
                            android:fontFamily="@font/poppins_regular"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/gradient_shadow_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circle_gradient"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/clock_icon"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_15"
                            android:textStyle="bold"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="#0F172A"
                            android:textSize="29sp"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minutes"
                            android:textSize="13sp"
                            android:textColor="#64748B"
                            android:layout_gravity="center"
                            android:layout_marginTop="-10dp"
                            android:fontFamily="@font/poppins_regular"/>
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </LinearLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/white">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/quote_background"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/openingComma"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/starting_quote"
                        app:layout_constraintEnd_toStartOf="@+id/quoteLineA"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/quoteLineA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/self_love_is_not_selfish"
                        android:textColor="#1E293B"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/openingComma"
                        app:layout_constraintTop_toTopOf="parent"
                        android:fontFamily="@font/poppins_regular"/>

                    <TextView
                        android:id="@+id/quoteLineB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quoteLineB"
                        android:textColor="#1E293B"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/closingComma"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/quoteLineA"
                        android:fontFamily="@font/poppins_regular"/>

                    <ImageView
                        android:id="@+id/closingComma"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/closing_quote"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/quoteLineB"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.8" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_186_users_are_already_practicing"
                android:textColor="#A3A3A3"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_now"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:icon="@drawable/arrow"
                app:iconGravity="textEnd"
                app:iconSize="11dp"
                android:layout_margin="22dp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background_gradient"
                app:iconTint="@color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
