<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_hey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hey"
            android:textColor="#0F172A"
            android:textSize="18sp"
            app:fontWeight="400"
            app:layout_constraintBottom_toTopOf="@+id/textView_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suresh"
            android:textColor="#6129FF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView_bottomLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_hey"
            android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:id="@+id/textView_bottomLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_make_this_morning_amazing"
            android:textColor="#64748B"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_name"
            android:fontFamily="@font/poppins_regular"/>

        <ImageButton
            android:id="@+id/whatsapp_ImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="0dp"
            android:padding="7dp"
            android:scaleType="fitCenter"
            android:src="@drawable/whatsapp_icon"
            app:layout_constraintEnd_toStartOf="@+id/languageImageButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/transparent"
            android:elevation="2dp"/>

        <ImageButton
            android:id="@+id/languageImageButton"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="3dp"
            android:background="@drawable/grey_circle"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/language_icon"
            app:layout_constraintEnd_toStartOf="@+id/notification_imageButton"
            app:layout_constraintStart_toEndOf="@+id/whatsapp_ImageButton"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="3dp"
            android:elevation="2dp"/>

        <ImageButton
            android:id="@+id/notification_imageButton"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:scaleType="centerCrop"
            android:src="@drawable/notification_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/languageImageButton"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="8dp"
            android:background="@drawable/white_circle"
            android:layout_marginTop="3dp"
            android:elevation="2dp"
            android:layout_marginEnd="2dp" />

        <TextView
            android:id="@+id/notificationBadgeTextView"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/notification_circle_background"
            android:gravity="center"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="7sp"
            android:translationZ="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/notification_imageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.73"
            app:layout_constraintStart_toStartOf="@+id/notification_imageButton"
            app:layout_constraintTop_toTopOf="@+id/notification_imageButton"
            app:layout_constraintVertical_bias="0.19" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/fragmentContainerFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintTop_toBottomOf="@+id/title_bar" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu_bar"
        app:labelVisibilityMode="labeled"
        android:background="@color/white"
        app:itemTextColor="@color/icon_tint_color"
        app:itemIconTint="@color/icon_tint_color" />
</androidx.constraintlayout.widget.ConstraintLayout>